feat: add business id (display name) to survey unit